--- a/user-local-test-local.yml
+++ b/user-local-test-local.yml
@@ -1,7 +1,18 @@
 spring:
   application:
     name: user-local-test
-claim_intake_service_name: claim-intake_Local
-benefit_coding_service_name: service-name_local
-claim_service_name: claim-service_local
-npi_lookup_url: "https://npiregistry.cms.hhs.gov/api"
+claim_intake_service_name: claim-intake_Local_yes11
+benefit_coding_service_name: service-name_local11
+claim_service_name: claim-service_local11
+npi_lookup_url: https://npiregistry.cms.hhs.gov/api11
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8090/eureka/
+management:
+  security:
+    enabled: false
+  endpoints:
+    web:
+      exposure:
+        include: refresh
