--- a/user-local-test-pcf.yml
+++ b/user-local-test-pcf.yml
@@ -5,3 +5,10 @@ claim_intake_service_name: claim-intake_pcf
 benefit_coding_service_name: service-name_pcf
 claim_service_name: claim-service_pcf
 npi_lookup_url: "https://npiregistry.cms.hhs.gov/api"
+management:
+  security:
+    enabled: false
+  endpoints:
+    web:
+      exposure:
+        include: refresh
